tests/models/struct/unnamed/vec/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2.0)]
    Vec<()>
);
fn main() {}
