tests/models/struct/unnamed/vec/fail/min_items.stderr
error: custom attribute panicked
 --> tests/models/struct/unnamed/vec/fail/min_items.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("expected integer literal")
